go-postgres-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-postgres-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-postgres-app
  template:
    metadata:
      labels:
        app: go-postgres-app
    spec:
      containers:
      - name: go-postgres-app
        image: sanjaymav/go-postgres-app:20
        ports:
          - containerPort: 8080
