go-postgres-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-postgres-app
spec:
  selector:
    app: go-postgres-app
  ports:
    - port: 80
      targetPort: 8080
