go-postgres-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-postgres-app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: go-postgress.sanjaylabs.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-postgres-app
                port:
                  number: 80
